# vibecad

./: .gitignore  AGENTS.md  README.md  pixi.toml  requirements-freecad-venv.txt  version.json
docs/: toolshapes.md  ui-style-test-baseline.md  vibecad-failure-analysis.md  vibecad-goals.md  vibecad-guiding-spec.md  vibecad-live-acceptance-report.md  vibecad-release-packaging.md
src/Gui/PreferencePacks/: CMakeLists.txt  package.xml
src/Gui/PreferencePacks/VibeCAD Preferences/: VibeCAD Preferences.cfg
src/Gui/PreferencePacks/VibeDark/: VibeDark.cfg
src/Gui/PreferencePacks/VibeLight/: VibeLight.cfg
src/Gui/Stylesheets/: CMakeLists.txt  VibeDark.qss  VibeLight.qss
src/Gui/Stylesheets/overlay/: VibeDark_Overlay.qss  VibeLight_Overlay.qss
src/Main/: CMakeLists.txt  FreeCADGuiPy.cpp  MainCmd.cpp  MainGui.cpp  MainPy.cpp  VibeCADPortableLauncher.cpp  freecadCmd.rc.cmake  vibecadPortableLauncher.rc.cmake
src/Mod/OpenSCAD/: CMakeLists.txt  Init.py  InitGui.py
src/Mod/VibeCAD/: CMakeLists.txt  Init.py  InitGui.py  RUNTIME_VERIFICATION.md  TestVibeCAD.py  VibeCADAuth.py  VibeCADBuild123d.py  VibeCADCodex.py  VibeCADCore.py  VibeCADDebug.py  VibeCADDesignReview.py  VibeCADGeometry.py  VibeCADGeometryWorker.cpp  VibeCADGrid.py  VibeCADGui.py  VibeCADIntentMemory.py  VibeCADIntentMemoryCompiler.py  VibeCADOpenSCAD.py  VibeCADPreferences.py  VibeCADProject.py  VibeCADProvider.py  VibeCADScriptedEditor.py  VibeCADScriptedOwnership.py  VibeCADSession.py  VibeCADTools.py  VibeCADTransactions.py  VibeCADVibeScript.py  VibeCADWorkbenchTools.py  build123d-requirements.txt  build123d_worker.py  openscad_freecad_worker.py  requirements.txt  vibescript_api.py  vibescript_executor.py
src/Mod/VibeCAD/provider_tools/: __init__.py  assembly_add_component.py  assembly_check_interference.py  assembly_create_assembly.py  assembly_create_joint.py  assembly_get_assemblies.py  assembly_ground_component.py  assembly_set_component_placement.py  assembly_solve.py  base.py  cad_create_feature.py  cad_create_profile.py  cad_define_component.py  cad_define_envelope.py  cad_define_interface.py  cad_define_mechanism.py  cad_inspect_state.py  cad_verify_design.py  cam_add_tool.py  cam_create_job.py  cam_create_operation.py  cam_define_machine.py  cam_postprocess.py  cam_validate_job.py  context_visible.py  core_capture_view_screenshot.py  core_create_new_document.py  core_delete_object.py  core_enter_workspace.py  core_get_active_document.py  core_get_active_workbench_tool_pack.py  core_get_current_freecad_context.py  core_get_object_properties.py  core_get_report_view_errors.py  core_get_selection.py  core_get_task_panel.py  core_get_tool_shape_report.py  core_get_view_state.py  core_list_active_workbench_commands.py  core_list_registered_commands.py  (+56 more)
src/Mod/VibeCAD/tool_impl/: __init__.py
src/Mod/VibeCAD/tool_impl/service/: __init__.py  assembly_add_component.py  assembly_check_interference.py  assembly_common.py  assembly_create_assembly.py  assembly_create_joint.py  assembly_get_assemblies.py  assembly_ground_component.py  assembly_insert_component.py  assembly_list_structure.py  assembly_set_component_placement.py  assembly_solve.py  bim_add_window.py  bim_create_spatial_structure.py  bim_create_structure.py  bim_create_wall.py  bim_list_structure.py  build123d_create_model.py  build123d_delete_model.py  build123d_edit_source.py  build123d_inspect_model.py  build123d_reconfigure_model.py  build123d_set_inputs.py  build123d_set_parameters.py  cad_common.py  cad_create_feature.py  cad_create_profile.py  cad_define_component.py  cad_define_envelope.py  cad_define_interface.py  cad_define_mechanism.py  cad_inspect_state.py  cad_verify_design.py  cam_add_operation.py  cam_add_tool.py  cam_create_job.py  cam_create_operation.py  cam_define_machine.py  cam_list_jobs.py  cam_postprocess.py  (+159 more)
src/Mod/VibeCAD/tool_impl/sketcher/: __init__.py  add_arc.py  add_circle.py  add_constraint.py  add_ellipse.py  add_external_geometry.py  add_geometry.py  add_hole_pattern.py  add_polyline.py  add_slot.py  add_spline.py  close_sketch.py  common.py  constrain.py  constrain_common.py  create_sketch.py  delete_items.py  draw_rectangle.py  edit_constraint.py  inspect_sketch.py  measure.py  modify_geometry.py  move_point.py  open_sketch.py  remove_external_geometry.py  resolve_geometry.py  set_construction.py  set_geometry_name.py  transform_geometry.py  translate_geometry.py
src/Mod/VibeCAD/vibecad_tests/: __init__.py  conftest.py  support.py  test_auth.py  test_branding_contract.py  test_cam_tools.py  test_claude_code_subscription.py  test_codex_subscription.py  test_core_misc.py  test_engine_contracts.py  test_fem_geometry_tool_regressions.py  test_grid.py  test_gui_panel.py  test_gui_thumbnails.py  test_live_acceptance.py  test_partdesign_assembly.py  test_preferences.py  test_project_storage.py  test_provider_misc.py  test_provider_payloads.py  test_provider_research_review.py  test_provider_subprocess.py  test_service_context.py  test_session_loop.py  test_sketcher_tools.py  test_surface_tools.py  test_tool_surface_guardrails.py  test_tools_registry.py  test_vibescript_api.py  test_vibescript_engine.py  test_vibescript_executor.py  test_workbench_packs.py  test_workbench_summaries.py
tools/: artifact_provenance_selftest.py  build_vibecad.sh  collect_ui_test_baseline.py  ctest_inventory_regression.py  ctest_inventory_selftest.py  evaluate_ui_style_gate.py  freecad_dependency_smoke.py  freecad_dependency_smoke_selftest.py  freecad_registered_harness_selftest.py  freecad_registered_issue_classifications.default.json  freecad_registered_test_harness.py  freecad_startup_smoke.py  freecad_venv.sh  freecadcmd_venv.sh  generate_vibecad_brand_assets.py  gui_interaction_driver.py  gui_interaction_harness.md  gui_interaction_harness.py  gui_layout_assertion_coverage_selftest.py  gui_layout_assertion_smoke.py  gui_layout_assertions.default.json  gui_screenshot_integrity.py  gui_screenshot_integrity_selftest.py  gui_visual_baseline_driver.py  gui_visual_baseline_harness.py  gui_visual_baseline_harness_selftest.py  (+37 more)
(+191 files in other folders)
